# Lynn

./: .gitignore  AEON7_tool_call_issue_draft.md  BETA-0.76.2-TESTING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  README_CN.md  README_EN.md  REVIEW_MANIFEST_20260501.md  ROADMAP.md  SECURITY.md  eslint.config.js  index.js  jian.md  main.bundle.cjs  package-lock.json  package.json  settings-BLmlfmc_.js  vite.config.server.js  vite.config.ts  vitest.config.js  深圳山语海小区_买卖时机与户型分析.md  蛇口120平1000万_十盘横评筛选.md
.github/: release-notes.md  update-manifest.json
brain-v2-mirror/: .gitignore  README.md  agent-checkpoint.mjs  auth.js  deep-research.mjs  package-lock.json  package.json  perf-init.js  provider-registry.js  router.js  server.js  stream-bridge.js  verifier-middleware.mjs  verifier-prompts.mjs  verifier-whitelist.json
core/: agent-manager.js  agent.js  bridge-session-manager.js  channel-manager.js  claw-aegis-guardrails.js  client-agent-identity.js  compaction-settings.js  config-coordinator.js  constants.js  engine.js  events.js  execution-router.js  expert-manager.js  first-run.js  llm-client.js  llm-utils.js  migrate-providers.js  model-manager.js  model-sync.js  plugin-context.js  plugin-manager.js  preferences-manager.js  provider-registry.js  session-coordinator.js  session-index.js  skill-manager.js
data/: hf_nerkyor.json
desktop/: auto-updater.cjs  entitlements.mac.plist  ipc-wrapper.cjs  (+5 more)
desktop/native-modules/aec/: Cargo.toml  index.js  package.json
desktop/native-modules/aec/src/: lib.rs
desktop/native-modules/aec/test/: hello.mjs
(+970 files in other folders)
